--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,2 +1,32 @@
 ---
-# defaults file for .
+
+php_install_fpm: true
+php_extra_packages: []
+
+# php.ini config
+php_ini:
+  - key: 'date.timezone'
+    value: 'Europe/Paris'
+  - key: 'expose_php'
+    value: 'Off'
+  - key: 'memory_limit'
+    value: '256M'
+
+# OpCache settings (useful for PHP >=5.5).
+php_opcache_enable: "1"
+php_opcache_enable_cli: "0"
+php_opcache_memory_consumption: "96"
+php_opcache_interned_strings_buffer: "16"
+php_opcache_max_accelerated_files: "4096"
+php_opcache_max_wasted_percentage: "5"
+php_opcache_validate_timestamps: "1"
+php_opcache_revalidate_freq: "2"
+php_opcache_max_file_size: "0"
+
+# APC settings (useful for PHP <5.5).
+php_apc_cache_by_default: "1"
+php_apc_shm_size: "96M"
+php_apc_stat: "1"
+php_apc_enable_cli: "0"
+
+# PHP-FPM
