--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,2 +1,11 @@
 ---
-# vars file for .
+
+php_packages:
+  - php5-cli
+  - php5-curl
+  - php5-gd
+  - php5-mcrypt
+  - php5-mysqlnd
+  - php5-intl
+  - php5-dev
+
