--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -8,3 +8,7 @@
   with_items: php_ini
   notify: restart php-fpm
 
+- name: TEMPLATE | Deploy pool configuration
+  template: src=etc/php5/fpm/pool.d/pool.conf.j2 dest=/etc/php5/fpm/pool.d/{{ item.pool_name }}.conf
+  with_items: php_fpm_poold
+  notify: restart php-fpm
