--- a/tasks/php54max.yml
+++ b/tasks/php54max.yml
@@ -4,5 +4,5 @@
   apt: pkg=php-apc state=latest
 
 - name: TEMPLATE | Configure APC
-  template: src=etc/php5/mods-available/apc.j2 dest=/etc/php5/mods-available/apc.ini
+  template: src=etc/php5/mods-available/apcu.ini.j2 dest=/etc/php5/mods-available/apc.ini
   notify: restart php-fpm
