--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -5,7 +5,9 @@
 
 - name: LINEINFILE | PHP configuration
   lineinfile: dest=/etc/php5/fpm/php.ini regexp='^;?{{ item.key }}' line='{{ item.key }} = {{ item.value }}'
-  with_items: php_ini
+  with_flattened:
+    - php_ini
+    - php_ini_fpm
   notify: restart php-fpm
 
 - name: TEMPLATE | Deploy pool configuration
