--- a/vars/php-5.6.yml
+++ b/vars/php-5.6.yml
@@ -5,4 +5,4 @@ php_etc_dir: '/etc/php5'
 php_fpm_service: 'php5-fpm'
 php_default_fpm_sock: '/var/run/php5-fpm.sock'
 php_mods_dir: '/etc/php5/mods-available'
-php_mysql_package: 'php-mysqlnd'
+php_mysql_package: 'php5-mysqlnd'
