--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,13 +1,11 @@
 ---
 
 # On Debian Jessie, we need Dotdeb for PHP 7.0
-- hosts: all
+- hosts: php-7.0
   roles:
     - role: HanXHX.dotdeb
       when: >
-        ansible_distribution_major_version | version_compare(8, 'eq') and
-        php_version is defined and
-        php_version | version_compare('7.0', 'ge')
+        ansible_distribution_major_version | version_compare(8, 'eq')
 
 - hosts: all
   vars:
