--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,12 +8,12 @@ galaxy_info:
   platforms:
   - name: Debian
     versions:
-    - wheezy
     - jessie
   galaxy_tags:
   - development
   - web
   - php
+  - php7
   - debian
 dependencies: []
 
