Fix mods-available directory for PHP7

--- a/vars/php-7.0.yml
+++ b/vars/php-7.0.yml
@@ -4,5 +4,5 @@ php_apt_prefix: 'php7.0-'
 php_etc_dir: '/etc/php/7.0'
 php_fpm_service: 'php7.0-fpm'
 php_default_fpm_sock: '/var/run/php/php7.0-fpm.sock'
-php_mods_dir: '/etc/php/mods-available'
+php_mods_dir: '/etc/php/7.0/mods-available'
 php_mysql_package: 'php7.0-mysql'
