Restart PHP-FPM when new packages are installed

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,6 +16,7 @@
   with_flattened:
     - "{{ php_packages }}"
     - "{{ php_extra_packages }}"
+  notify: restart php-fpm
 
 - name: INCLUDE | PHP-FPM
   include: fpm.yml
