--- a/tests/test.yml
+++ b/tests/test.yml
@@ -83,6 +83,8 @@
 
     - name: SHELL | Check vhost
       shell: "curl -v -H 'Host: {{ vhost }}' http://127.0.0.1/phpinfo.php 2> /dev/null | grep h1 | grep -o 'PHP Version [57].*<' | sed -r 's/<//g'"
+      args:
+        warn: false
       changed_when: false
       register: c
       failed_when: c.stdout == ''
