--- a/tests/test.yml
+++ b/tests/test.yml
@@ -13,28 +13,16 @@
       apt: pkg={{ item }} update_cache=yes cache_valid_time=3600
       with_items: ['apt-transport-https', 'curl', 'lsb-release', 'ca-certificates']
 
-    - block:
-
-      - name: APT | Install DotDeb key
-        apt_key: url='http://www.dotdeb.org/dotdeb.gpg' state=present
-
-      - name: APT | Add Dotdeb repository for Jessie + PHP7
-        apt_repository: repo='deb http://packages.dotdeb.org jessie all' state=present
-
+    - name: INCLUDE | Dotdeb
+      include: includes/dotdeb.yml
       when: >
         ansible_distribution_major_version | version_compare(8, 'eq') and
         php_version | version_compare('7.0', 'eq')
 
-    - block:
-
-      - name: APT | Install Sury key
-        apt_key: url='https://packages.sury.org/php/apt.gpg' state=present
-
-      - name: APT | Add Dotdeb repository for Jessie + PHP7
-        apt_repository: repo='deb https://packages.sury.org/php/ jessie main' state=present
-
+    - name: INCLUDE | Sury
+      include: includes/sury.yml
       when: >
-        ansible_distribution_major_version | version_compare(8, 'eq') and
+        ansible_distribution_major_version | version_compare(9, 'le') and
         php_version | version_compare('7.1', 'eq')
 
     - name: APT | Install nginx
@@ -82,7 +70,7 @@
       copy: dest=/var/www/phpinfo.php content='<?php phpinfo();'
 
     - name: SHELL | Check vhost
-      shell: "curl -v -H 'Host: {{ vhost }}' http://127.0.0.1/phpinfo.php 2> /dev/null | grep h1 | grep -o 'PHP Version [57].*<' | sed -r 's/<//g'"
+      shell: "curl -v -H 'Host: {{ vhost }}' http://127.0.0.1/phpinfo.php 2> /dev/null | grep h1 | grep -o 'PHP Version {{ php_version }}' | sed -r 's/<//g'"
       args:
         warn: false
       changed_when: false
