--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -4,13 +4,11 @@
   apt: pkg={{ php_fpm_service }} state=present
 
 - name: LINEINFILE | PHP configuration
-  lineinfile: >
-    dest='{{ php_etc_dir }}/fpm/php.ini'
-    regexp='^;?{{ item.key }}'
-    line='{{ item.key }} = {{ item.value }}'
-  with_flattened:
-    - "{{ php_ini }}"
-    - "{{ php_ini_fpm }}"
+  lineinfile:
+    dest: '{{ php_etc_dir }}/fpm/php.ini'
+    regexp: '^;?{{ item.key }}'
+    line: '{{ item.key }} = {{ item.value }}'
+  with_dict: "{{ php_ini | combine(php_ini_fpm) }}"
   notify: restart php-fpm
 
 - name: TEMPLATE | Deploy pool configuration
