--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,13 +26,11 @@
   when: php_install_fpm
 
 - name: LINEINFILE | PHP configuration
-  lineinfile: >
-    dest='{{ php_etc_dir }}/cli/php.ini'
-    regexp='^;?{{ item.key }}'
-    line='{{ item.key }} = {{ item.value }}'
-  with_flattened:
-    - "{{ php_ini }}"
-    - "{{ php_ini_cli }}"
+  lineinfile:
+    dest: '{{ php_etc_dir }}/cli/php.ini'
+    regexp: '^;?{{ item.key }}'
+    line: '{{ item.key }} = {{ item.value }}'
+  with_dict: "{{ php_ini_cli }}"
 
 - name: INCLUDE | Xdebug
   include: xdebug.yml
