--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,7 @@
 ---
 
 - name: restart php-fpm
-  service: name='{{ php_fpm_service }}' state=restarted
+  service:
+    name: '{{ php_fpm_service }}'
+    state: restarted
   when: php_install_fpm
