--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,20 +1,19 @@
 ---
 galaxy_info:
   author: Emilien Mantel
-  description: Install and configure PHP 5.6/7.0/7.1 (+ FPM is wanted)
+  description: Install and configure PHP 7.0/7.1/7.2 (+ FPM is wanted)
   company:
   license: GPLv2
   min_ansible_version: 2.0
   platforms:
   - name: Debian
     versions:
-    - jessie
+    - stretch
   galaxy_tags:
   - development
   - web
   - php
-  - php5.6
-  - php5
+  - php-fpm
   - php7
   - debian
 dependencies: []
