--- a/tasks/fpm.yml
+++ b/tasks/fpm.yml
@@ -1,19 +1,20 @@
 ---
 
 - name: APT | Install PHP-FPM
-  apt: pkg={{ php_fpm_service }} state=present
+  apt:
+    pkg: "{{ php_fpm_service }}"
 
 - name: LINEINFILE | PHP configuration
   lineinfile:
-    dest: '{{ php_etc_dir }}/fpm/php.ini'
+    dest: '{{ php_cli_ini }}'
     regexp: '^;?{{ item.key }}'
     line: '{{ item.key }} = {{ item.value }}'
   with_dict: "{{ php_ini | combine(php_ini_fpm) }}"
   notify: restart php-fpm
 
 - name: TEMPLATE | Deploy pool configuration
-  template: >
-    src=etc/__php__/fpm/pool.d/pool.conf.j2
-    dest='{{ php_etc_dir }}/fpm/pool.d/{{ item.pool_name }}.conf'
+  template:
+    src: etc/__php__/fpm/pool.d/pool.conf.j2
+    dest: '{{ php_fpm_pool_dir }}/{{ item.pool_name }}.conf'
   with_items: "{{ php_fpm_poold }}"
   notify: restart php-fpm
