--- a/tasks/opcache.yml
+++ b/tasks/opcache.yml
@@ -1,20 +1,21 @@
 ---
 
 - name: APT | Install APCu
-  apt: pkg="{{ php_apt_prefix }}apcu" state=present
+  apt:
+    pkg: "{{ php_package_prefix }}apcu"
 
 - name: APT | Install Opcache
-  apt: pkg="{{ php_apt_prefix }}opcache" state=present
-  when: php_version | version_compare('7.0', 'ge')
+  apt:
+    pkg: "{{ php_package_prefix }}opcache"
 
-- name: TEMPLATE | Configure APCu
-  template: >
-    src=etc/__php__/mods-available/opcache.ini.j2
-    dest="{{ php_mods_dir }}/opcache.ini"
+- name: TEMPLATE | Configure Opcache
+  template:
+    src: "etc/__php__/mods-available/opcache.ini.j2"
+    dest: "{{ php_mods_dir }}/opcache.ini"
   notify: restart php-fpm
 
 - name: TEMPLATE | Configure APCu
-  template: >
-    src=etc/__php__/mods-available/apcu.ini.j2
-    dest={{ php_mods_dir }}/apcu.ini
+  template:
+    src: "etc/__php__/mods-available/apcu.ini.j2"
+    dest: "{{ php_mods_dir }}/apcu.ini"
   notify: restart php-fpm
